...
                                    <constraint firstAttribute="width" constant="60" id="gWa-02-Vh4"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKa-ZE-RDa">
                                <rect key="frame" x="16" y="722" width="382" height="50"/>
                                <color key="backgroundColor" name="White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <color key="tintColor" name="Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти" buttonSize="large">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
...
